--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ img {
 }
 
 .backdrop.is-hidden .modal {
-  transform: scale(0) skew(30deg);
+  transform: translate(-50%, -50%) scale(0.4);
 }
 
 .modal {
@@ -246,21 +246,18 @@ img {
   top: 50%;
   left: 50%;
 
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
+  padding: 40px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: scale(1) translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button {
-  text-align: right;
-}
-
-.but-close {
+.modal-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -280,9 +277,85 @@ img {
   fill: currentColor;
 }
 
-.but-close:hover,
-.but-close:focus {
+.modal-close:hover,
+.modal-close:focus {
   color: var(--accent-color);
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-form-field {
+  display: block;
+  text-align: left;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+.modal-input {
+  width: 448px;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+}
+.modal-input:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  outline: none;
+  resize: none;
+  cursor: pointer;
+}
+
+.modal-text::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-checkbox {
+  cursor: pointer;
+}
+.contract-text {
+  display: block;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-bottom: 30px;
+}
+.contract-link {
+  color: var(--accent-color);
+}
+
+.bth-modal-send {
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--icon-white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 /* section */
 
@@ -290,7 +363,6 @@ img {
   color: var(--title-text-color);
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   margin-bottom: 50px;
 }
 
@@ -356,6 +428,7 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  text-transform: uppercase;
   color: var(--primary-white-color);
 }
 
@@ -441,7 +514,8 @@ img {
   border: 1px solid var(--social-color);
   border-radius: 4px;
   color: var(--social-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-list:not(:first-child) {
   margin-left: 30px;
@@ -590,6 +664,45 @@ img {
   margin-left: 10px;
 }
 
+.footer-form {
+  margin-left: 93px;
+}
+
+.footer-form-list {
+  display: flex;
+}
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: var(--second-bg-color);
+  outline: none;
+  color: var(--icon-white-color);
+}
+.footer-button {
+  display: flex;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  padding-left: 29px;
+  margin-left: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--icon-white-color);
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.icon-footer-button {
+  fill: currentColor;
+  margin-left: 10px;
+}
 /* Portfolio */
 
 .section-project {
@@ -642,12 +755,11 @@ img {
 
 .portfolio-overlay {
   position: absolute;
-  display: flex;
-  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 63px 24px;
   background: rgba(33, 150, 243, 0.9);
 
   transform: translatey(100%);
@@ -657,8 +769,6 @@ img {
 .portfolio-overlay-text {
   font-size: 18px;
   line-height: 1.56;
-  padding-left: 24px;
-  padding-right: 24px;
 
   color: var(--primary-white-color);
 }
