--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,26 @@ img {
   margin-bottom: 12px;
 }
 
+.modal-input-wrap {
+  position: relative;
+  margin-bottom: 10px;
+}
+.icon-modal-input {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .icon-modal-input {
+  fill: var(--accent-color);
+}
+
+.modal-input:focus,
+.modal-text:focus {
+  border-color: var(--accent-color);
+}
 .modal-form-field {
   display: block;
   text-align: left;
@@ -307,9 +327,7 @@ img {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
-}
-.modal-input:not(:last-child) {
-  margin-bottom: 10px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text {
@@ -322,6 +340,7 @@ img {
   outline: none;
   resize: none;
   cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text::placeholder {
