--- a/css/styles.css
+++ b/css/styles.css
@@ -353,16 +353,36 @@ img {
 .modal-checkbox {
   cursor: pointer;
 }
-.contract-text {
-  display: block;
+.modal-contract-text {
+  display: flex;
+  align-items: center;
   font-size: 14px;
   line-height: 1.71;
   margin-bottom: 30px;
 }
+
 .contract-link {
   color: var(--accent-color);
 }
+.modal-check-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.modal-icon-check {
+  fill: var(--icon-white-color);
+}
+.modal-checkbox:checked + .modal-check-item {
+  background-color: var(--accent-color);
+  border: none;
+}
 .bth-modal-send {
   width: 200px;
   height: 50px;
