--- a/css/styles.css
+++ b/css/styles.css
@@ -355,7 +355,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form-fild-checkbox {
+.form-field-checkbox {
   display: flex;
   margin-bottom: 30px;
   align-items: center;
@@ -393,13 +393,7 @@ img {
   background-color: var(--accent-color);
   border: none;
 }
-.bth-submit {
-  display: block;
-  min-width: 200px;
-  min-height: 50px;
-  margin: 0 auto;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+
 /* section */
 
 .section-title {
@@ -585,6 +579,11 @@ img {
   padding: 10px 32px;
   border: 0px;
   border-radius: 4px;
+  display: block;
+  min-width: 200px;
+  min-height: 50px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .secondary-button {
@@ -725,12 +724,9 @@ img {
   outline: none;
   color: var(--icon-white-color);
 }
-.footer-button {
+.primary-button-flex {
   display: flex;
   align-items: center;
-  width: 200px;
-  height: 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .icon-footer-button {
